# okapi-utoipa

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  env.example  rewrite.sh  scripts.sh
.cargo-husky/hooks/: pre-commit  pre-push
src/: error.rs  lib.rs  main.rs  openapi.rs  router.rs  users.rs
