[package]
name = "okapi-utoipa"
description = "An okapi+utoipa integration example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]

[dev-dependencies]

[lints.clippy]
needless_return = "allow"
