[package]
name = "okapi-utoipa"
description = "An okapi+utoipa integration example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
axum = "0.8.4"
axum-test = { version = "17.3.0", optional = true }
okapi-operation = { path = "okapi/okapi-operation", features = ["axum"] } # replace it with a crates.io version when an axum 0.8 support PR will be merged
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[features]
default = []
generate = ["axum-test"]
